add auth handler
