# entity/user.go
@@ -1,0 +1,12 @@
+package entity
+
+import "time"
+
+// User ...
+type User struct {
+	ID        int64     `json:"id"`
+	Email     string    `json:"email"`
+	Password  string    `json:"password"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
